# google-research

scann/: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  bug.txt  dependencies.txt  main.cpp  ~CMakeLists.txt
scann/abseil-cpp/absl/strings/: string_view.h
scann/modules/: FindProtobuf.cmake  FindTensorFlow.cmake
scann/scann/: CMakeLists.txt
scann/scann/base/: CMakeLists.txt  reordering_helper_factory.cc  restrict_allowlist.h  search_parameters.h  single_machine_base.h  single_machine_factory_options.h  single_machine_factory_scann.cc
scann/scann/base/internal/: CMakeLists.txt  single_machine_factory_impl.h
scann/scann/brute_force/: CMakeLists.txt
scann/scann/coscann/: CMakeLists.txt
scann/scann/data_format/: CMakeLists.txt  datapoint.h  dataset.cc  dataset.h  features.proto  gfv_conversion.h  gfv_properties.h
scann/scann/data_format/internal/: CMakeLists.txt
scann/scann/distance_measures/: CMakeLists.txt  distance_measure_base.h  distance_measure_factory.h
scann/scann/distance_measures/many_to_many/: CMakeLists.txt  many_to_many_common.h
scann/scann/distance_measures/one_to_many/: CMakeLists.txt
scann/scann/distance_measures/one_to_one/: CMakeLists.txt
scann/scann/hashes/: CMakeLists.txt  hashing_base.h
scann/scann/hashes/asymmetric_hashing2/: CMakeLists.txt  indexing.cc  indexing.h  querying.h  searcher.h  serialization.h  training_model.cc  training_model.h  training_options.cc  training_options.h  training_options_base.h
scann/scann/hashes/internal/: CMakeLists.txt  lut16_avx2.tpl.cc  lut16_avx512_noprefetch.tpl.cc  lut16_avx512_prefetch.tpl.cc  lut16_avx512_smart.tpl.cc  lut16_sse4.tpl.cc
scann/scann/metadata/: CMakeLists.txt  metadata_getter.h
scann/scann/oss_wrappers/: CMakeLists.txt
scann/scann/partitioning/: CMakeLists.txt  kmeans_tree_partitioner.cc  kmeans_tree_partitioner.h  kmeans_tree_partitioner.proto  kmeans_tree_partitioner_helper.cc  partitioner.proto  partitioner_base.h  partitioner_factory.cc  partitioner_factory.h  partitioner_factory_base.cc  partitioner_factory_base.h
scann/scann/projection/: CMakeLists.txt  chunking_projection.h  projection_factory.cc  projection_factory.h
scann/scann/proto/: CMakeLists.txt  brute_force.proto  centers.proto  exact_reordering.proto  hash.proto  hashed.proto  input_output.proto  metadata.proto  partitioning.proto  results.proto  scann.proto
scann/scann/scann_ops/cc/: CMakeLists.txt  scann.cc  scann.h
scann/scann/scann_ops/cpp_interface/: dataset.hpp  scann_builder.cpp  scann_builder.hpp  scann_ops_pybind.cpp  scann_ops_pybind.hpp
scann/scann/tree_x_hybrid/: CMakeLists.txt  tree_ah_hybrid_residual.cc  tree_ah_hybrid_residual.h
scann/scann/tree_x_hybrid/internal/: CMakeLists.txt
scann/scann/trees/: CMakeLists.txt
scann/scann/trees/kmeans_tree/: CMakeLists.txt  kmeans_tree.h  kmeans_tree.proto  kmeans_tree_node.cc  kmeans_tree_node.h  training_options.cc  training_options.h
scann/scann/utils/: CMakeLists.txt  datapoint_utils.h  factory_helpers.cc  factory_helpers.h  gmm_utils.cc  gmm_utils.h  hash_leaf_helpers.cc  hash_leaf_helpers.h  input_data_utils.cc  input_data_utils.h  memory_logging.h  scann_config_utils.cc  scann_config_utils.h  types.h  util_functions.cc  util_functions.h
scann/scann/utils/fixed_point/: CMakeLists.txt
scann/scann/utils/internal/: CMakeLists.txt
scann/scann/utils/intrinsics/: CMakeLists.txt
scann/scann_api/scann/: CMakeLists.txt  dataset.hpp  io.hpp  scann_builder.cpp  scann_builder.hpp  scann_ops_pybind.cpp  scann_ops_pybind.hpp  scann_searcher.cpp  scann_searcher.hpp
