add_subdirectory(base)
add_subdirectory(brute_force)
add_subdirectory(coscann)
add_subdirectory(data_format)
add_subdirectory(distance_measures)
add_subdirectory(hashes)
add_subdirectory(metadata)
add_subdirectory(oss_wrappers)
add_subdirectory(partitioning)
add_subdirectory(projection)
add_subdirectory(proto)
add_subdirectory(scann_ops)
add_subdirectory(tree_x_hybrid)
add_subdirectory(trees)
add_subdirectory(utils)












