add_subdirectory(internal)

add_library(base_single_machine_factory_scann SHARED single_machine_factory_scann.cc single_machine_factory_scann.h)

set(SOURCES
base_reordering_helper_factory
base_single_machine_base
base_single_machine_factory_options
base_internal_single_machine_factory_impl
brute_force
brute_force_scalar_quantized_brute_force
data_format_dataset
distance_measures_distance_measures
oss_wrappers_scann_aligned_malloc
oss_wrappers_scann_down_cast
oss_wrappers_scann_threadpool
oss_wrappers_tf_dependency
partitioning_kmeans_tree_like_partitioner
partitioning_partitioner_factory
partitioning_partitioner_factory_base
partitioning_projecting_decorator
proto_brute_force_cc_proto
proto_distance_measure_cc_proto
proto_exact_reordering_cc_proto
proto_scann_cc_proto
tree_x_hybrid_tree_ah_hybrid_residual
tree_x_hybrid_tree_x_hybrid_smmd
utils_factory_helpers
utils_hash_leaf_helpers
utils_scalar_quantization_helpers
utils_types

absl::base
absl::core_headers
absl::flags
absl::memory
)

target_link_libraries(base_single_machine_factory_scann PUBLIC ${SOURCES})

add_library(base_reordering_helper_factory SHARED reordering_helper_factory.cc reordering_helper_factory.h)

set(SOURCES
base_single_machine_factory_options
data_format_dataset
hashes_asymmetric_hashing2_training_model
oss_wrappers_scann_aligned_malloc
oss_wrappers_scann_down_cast
oss_wrappers_tf_dependency
projection_projection_factory
proto_distance_measure_cc_proto
proto_exact_reordering_cc_proto
utils_factory_helpers
utils_reordering_helper
utils_types

absl::base
absl::flags
)

target_link_libraries(base_reordering_helper_factory PUBLIC ${SOURCES})

add_library(base_single_machine_factory_options SHARED single_machine_factory_options.cc single_machine_factory_options.h)

set(SOURCES
oss_wrappers_scann_aligned_malloc
oss_wrappers_scann_down_cast
oss_wrappers_tf_dependency
partitioning_partitioner_cc_proto
proto_centers_cc_proto
trees_kmeans_tree
utils_input_data_utils
utils_types
utils_fixed_point_pre_quantized_fixed_point

absl::base
absl::flags
)

target_link_libraries(base_single_machine_factory_options PUBLIC ${SOURCES})

add_library(base_single_machine_base SHARED single_machine_base.cc single_machine_base.h)

set(SOURCES
base_search_parameters
base_single_machine_factory_options
data_format_datapoint
data_format_dataset
data_format_docid_collection
data_format_docid_collection_interface
hashes_hashing_base
metadata_metadata_getter
oss_wrappers_scann_aligned_malloc
oss_wrappers_scann_down_cast
oss_wrappers_tf_dependency
proto_scann_cc_proto
utils_common
utils_factory_helpers
utils_reordering_helper
utils_types
utils_util_functions
utils_zip_sort

absl::base
absl::flags
absl::status
absl::strings
)

target_link_libraries(base_single_machine_base PUBLIC ${SOURCES})

add_library(base_search_parameters SHARED search_parameters.cc search_parameters.h)

set(SOURCES
base_restrict_allowlist
data_format_features_cc_proto
oss_wrappers_scann_aligned_malloc
oss_wrappers_tf_dependency
utils_types
)

target_link_libraries(base_search_parameters PUBLIC ${SOURCES})

add_library(base_restrict_allowlist SHARED restrict_allowlist.cc restrict_allowlist.h)

set(SOURCES
oss_wrappers_scann_aligned_malloc
oss_wrappers_scann_bits
oss_wrappers_scann_down_cast
oss_wrappers_tf_dependency
utils_bit_iterator
utils_common
utils_types

absl::base
absl::flags

gtest_main
)

target_link_libraries(base_restrict_allowlist PUBLIC ${SOURCES})