
# add_library(proto_input_output_cc_proto INTERFACE)
# target_link_libraries(proto_input_output_cc_proto INTERFACE cc_proto)

# add_library(data_format_features_cc_proto INTERFACE)
# target_link_libraries(data_format_features_cc_proto INTERFACE cc_proto)

# add_library(proto_hashed_cc_proto INTERFACE)
# target_link_libraries(proto_hashed_cc_proto INTERFACE cc_proto)

# add_library(partitioning_partitioner_cc_proto INTERFACE)
# target_link_libraries(partitioning_partitioner_cc_proto INTERFACE cc_proto)

# add_library(proto_exact_reordering_cc_proto INTERFACE)
# target_link_libraries(proto_exact_reordering_cc_proto INTERFACE cc_proto)

# add_library(proto_results_cc_proto INTERFACE)
# target_link_libraries(proto_results_cc_proto INTERFACE cc_proto)

# add_library(proto_distance_measure_cc_proto INTERFACE)
# target_link_libraries(proto_distance_measure_cc_proto INTERFACE cc_proto)

# add_library(distance_measures INTERFACE)
# target_link_libraries(distance_measures INTERFACE cc_proto)

# add_library(proto_hash_cc_proto INTERFACE)
# target_link_libraries(proto_hash_cc_proto INTERFACE cc_proto)

# add_library(proto_projection_cc_proto INTERFACE)
# target_link_libraries(proto_projection_cc_proto INTERFACE cc_proto)

# add_library(proto_scann_cc_proto INTERFACE)
# target_link_libraries(proto_scann_cc_proto INTERFACE cc_proto)

# add_library(proto_brute_force_cc_proto INTERFACE)
# target_link_libraries(proto_brute_force_cc_proto INTERFACE cc_proto)

# add_library(proto_incremental_updates_cc_proto INTERFACE)
# target_link_libraries(proto_incremental_updates_cc_proto INTERFACE cc_proto)

# add_library(proto_metadata_cc_proto INTERFACE)
# target_link_libraries(proto_metadata_cc_proto INTERFACE cc_proto)

# add_library(proto_partitioning_cc_proto INTERFACE)
# target_link_libraries(proto_partitioning_cc_proto INTERFACE cc_proto)

# add_library(proto_restricts_cc_proto INTERFACE)
# target_link_libraries(proto_restricts_cc_proto INTERFACE cc_proto)

# add_library(proto_centers_cc_proto INTERFACE)
# target_link_libraries(proto_centers_cc_proto INTERFACE cc_proto)

# add_library(tree_kmeans_tree_kmeans_tree_cc_proto INTERFACE)
# target_link_libraries(tree_kmeans_tree_kmeans_tree_cc_proto INTERFACE cc_proto)

# add_library(partitioning_kmeans_tree_partitioner_cc_proto INTERFACE)
# target_link_libraries(partitioning_kmeans_tree_partitioner_cc_proto INTERFACE cc_proto)

# add_library(proto_crowding_cc_proto INTERFACE)
# target_link_libraries(proto_crowding_cc_proto INTERFACE cc_proto)