add_subdirectory(internal)

add_library(tree_x_hybrid_tree_x_params SHARED tree_x_params.cc tree_x_params.h )

set(SOURCES
base_search_parameters
utils_types
)

target_link_libraries(tree_x_hybrid_tree_x_params PUBLIC ${SOURCES})
 

add_library(tree_x_hybrid_leaf_searcher_optional_parameter_creator INTERFACE)

set(SOURCES
base_search_parameters
data_format_datapoint
utils_types
)

target_link_libraries(tree_x_hybrid_leaf_searcher_optional_parameter_creator INTERFACE ${SOURCES})
 

add_library(tree_x_hybrid_tree_x_hybrid_smmd SHARED tree_x_hybrid_smmd.cc tree_x_hybrid_smmd.h)

set(SOURCES
tree_x_hybrid_leaf_searcher_optional_parameter_creator
tree_x_hybrid_tree_x_params
base_restrict_allowlist
base_search_parameters
base_single_machine_base
brute_force_scalar_quantized_brute_force
data_format_datapoint
data_format_dataset
hashes_asymmetric_hashing2_serialization
oss_wrappers_scann_aligned_malloc
oss_wrappers_scann_down_cast
oss_wrappers_tf_dependency
partitioning_kmeans_tree_partitioner
partitioning_partitioner_base
tree_x_hybrid_internal_batching
tree_x_hybrid_internal_utils
utils_common
utils_parallel_for
utils_top_n_amortized_constant
utils_types

absl::base
absl::flat_hash_set
absl::node_hash_map
absl::flags
absl::memory
absl::status
absl::synchronization
absl::time
gtest_main
)

target_link_libraries(tree_x_hybrid_tree_x_hybrid_smmd PUBLIC ${SOURCES})
 

add_library(tree_x_hybrid_tree_ah_hybrid_residual SHARED tree_ah_hybrid_residual.cc tree_ah_hybrid_residual.h )

set(SOURCES
tree_x_hybrid_tree_x_params
base_search_parameters
base_single_machine_base
data_format_datapoint
data_format_dataset
distance_measures_distance_measures
hashes_asymmetric_hashing2_indexing
hashes_asymmetric_hashing2_querying
hashes_asymmetric_hashing2_searcher
hashes_asymmetric_hashing2_serialization
hashes_asymmetric_hashing2_training
hashes_asymmetric_hashing2_training_options
oss_wrappers_scann_aligned_malloc
oss_wrappers_scann_down_cast
oss_wrappers_tf_dependency
partitioning_kmeans_tree_like_partitioner
partitioning_kmeans_tree_partitioner
projection_projection_factory
proto_centers_cc_proto
proto_distance_measure_cc_proto
proto_hash_cc_proto
tree_x_hybrid_internal_batching
tree_x_hybrid_internal_utils
trees_kmeans_tree
utils_fast_top_neighbors
utils_types

absl::base
absl::flags
absl::synchronization
absl::time
)

target_link_libraries(tree_x_hybrid_tree_ah_hybrid_residual PUBLIC ${SOURCES})